# latable

./: .gitignore  MANIFEST.in  Makefile  README.rst  latable.py  pyproject.toml  setup.py
src/: latable.py
tests/: test_tables.py
tools/: post-commit
