[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "latable"
authors = [
  { name="Roland Smith", email="rsmith@xs4all.nl" },
]
readme = "README.rst"
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
dynamic = ["version", "description"]
classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Environment :: Other Environment",
   "Intended Audience :: Developers",
   "Natural Language :: English",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3",
   "Topic :: Printing"
]

[project.urls]
Repository = "https://github.com/rsmith-nl/latable"
